kubernetes/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-cloud.yml --out kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: authservice
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authservice
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-cloud.yml --out kubernetes
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: authservice
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - env:
            - name: JWT_PRIVATE_KEY
              value: "-----BEGIN PRIVATE KEY-----MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDgkSqA2ozM771CeSeqQQrbuRonyIa+cYXJUW3PBRC4h2Vk+MOvlTpIAGCWN1UZ1mem8pordla3NCOddUuCkjzSX7YuD5tUVfeapA6ULBxrdAut/OYRSIri1OsgaC1CdgElWddRZkqXapjEOUw3Aob538UNlOeeJ6uOLLdpkItm2dWdAUfRJGiUwksQIZ465+HzJ6n7wKUcc7nuO9MtGThPQQpqTCohFrmdAU79YFzN9laxU1dQft6nFrHqfXKSWq5yFe2BPUk6OP/bDchuYzPko3Sa48l9T1x9y3XxBS28fNiivkLI4Z47HHOKeFqeVkDJ845JTVsxcbtR6/uEQ21BAgMBAAECggEAAL73gHpGLNyANfGeFdAyf4laLDCoornqaY4WMP5bNsNOxtE [...]
            - name: USERSERVICE_URL
              value: http://userservice:8080/user
          image: ghcr.io/robert27/thi-case-cnd-project/auth-service:main
          name: authservice
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
