kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:17.2
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-data
            - mountPath: /docker-entrypoint-initdb.d/schema.sql
              name: database-cm1
              subPath: schema.sql
      volumes:
        - name: database-data
          persistentVolumeClaim:
            claimName: database-data
        - name: database-cm1
          configMap:
            name: database-cm1
            items:
              - key: schema.sql
                path: schema.sql
