kubernetes/docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: ghcr.io/robert27/thi-case-cnd-project/docs:latest
          imagePullPolicy: Always
