kubernetes/get-item-info-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: get-item-info
  name: get-item-info
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: get-item-info
  template:
    metadata:
      labels:
        io.kompose.network/thi-case-cnd-projekt-default: "true"
        io.kompose.service: get-item-info
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: database
            - name: DB_NAME
              value: database
            - name: DB_PASSWORD
              value: SecReT-PasSwOrD
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              value: postgres
            - name: GRPC_OBJECTS_HOST
              value: object-management
            - name: GRPC_OBJECTS_PORT
              value: "9090"
            - name: GRPC_URL_HOST
              value: url-validator
            - name: GRPC_URL_PORT
              value: "9092"
          image: ghcr.io/robert27/thi-case-cnd-project/get-item-info:latest
          name: get-item-info
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9094
              protocol: TCP
      restartPolicy: Always
