kubernetes/interval-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-cloud.yml --out kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: interval-monitor
  name: interval-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: interval-monitor
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-cloud.yml --out kubernetes
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: interval-monitor
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: database
            - name: DB_NAME
              value: database
            - name: DB_PASSWORD
              value: SecReT-PasSwOrD
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              value: postgres
            - name: JWT_PUBLIC_KEY
              value: '-----BEGIN PUBLIC KEY-----MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4JEqgNqMzO+9QnknqkEK27kaJ8iGvnGFyVFtzwUQuIdlZPjDr5U6SABgljdVGdZnpvKaK3ZWtzQjnXVLgpI80l+2Lg+bVFX3mqQOlCwca3QLrfzmEUiK4tTrIGgtQnYBJVnXUWZKl2qYxDlMNwKG+d/FDZTnnierjiy3aZCLZtnVnQFH0SRolMJLECGeOufh8yep+8ClHHO57jvTLRk4T0EKakwqIRa5nQFO/WBczfZWsVNXUH7epxax6n1yklquchXtgT1JOjj/2w3IbmMz5KN0muPJfU9cfct18QUtvHzYor5CyOGeOxxzinhanlZAyfOOSU1bMXG7Uev7hENtQQIDAQAB-----END PUBLIC KEY-----'
          image: ghcr.io/robert27/thi-case-cnd-project/interval-monitor:main
          name: interval-monitor
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
