kubernetes/url-validator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: url-validator
  name: url-validator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: url-validator
  template:
    metadata:
      labels:
        io.kompose.network/thi-case-cnd-projekt-default: "true"
        io.kompose.service: url-validator
    spec:
      containers:
        - image: ghcr.io/robert27/thi-case-cnd-project/url-validator:latest
          name: url-validator
          ports:
            - containerPort: 9092
              protocol: TCP
      restartPolicy: Always
