kubernetes/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: ghcr.io/robert27/thi-case-cnd-project/user-service:latest
          imagePullPolicy: Always
      restartPolicy: Always
