kubernetes/authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: authservice
  name: authservice
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: authservice
