kubernetes/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: docs
  name: docs
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: docs
