kubernetes/get-item-info-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-item-info
spec:
  ports:
    - name: item-grpc
      port: 9094
  selector:
    app: get-item-info
