kubernetes/interval-monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: interval-monitor
  name: interval-monitor
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: interval-monitor
