kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: nginx
