kubernetes/object-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-cloud.yml --out kubernetes
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: object-management
  name: object-management
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8080
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: object-management
