kubernetes/order-list-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: order-list
  name: order-list
spec:
  ports:
    - name: "9093"
      port: 9093
      targetPort: 9093
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: order-list
