kubernetes/url-validator-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: url-validator
  name: url-validator
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: url-validator
