kubernetes/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9091
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: userservice
