kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 80

          - path: /rest/user/(.*)
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080

          - path: /rest/object/(.*)
            pathType: Prefix
            backend:
              service:
                name: object-management
                port:
                  number: 8080

          - path: /rest/order/(.*)
            pathType: Prefix
            backend:
              service:
                name: order-list
                port:
                  number: 8082

          - path: /rest/auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 8081

          - path: /rest/interval/(.*)
            pathType: Prefix
            backend:
              service:
                name: interval-monitor
                port:
                  number: 8081

          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
